--- a/2 Entrega/gerenciamento.atestados/src/main/resources/templates/login.html
+++ b/2 Entrega/gerenciamento.atestados/src/main/resources/templates/login.html
@@ -14,6 +14,10 @@
         <input name="login" />
         <label for="senha">Senha</label>
         <input name="senha" />
+        <label for="nome">Nome</label>
+        <input name="nome" />
+        <label for="cargo">Cargo</label>
+        <input name="cargo" />
         <button type="submit">Submit</button >
     </form>
 
