--- a/2 Entrega/gerenciamento.atestados/src/main/resources/templates/login.html
+++ b/2 Entrega/gerenciamento.atestados/src/main/resources/templates/login.html
@@ -3,17 +3,23 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>Login | Gerenciamento de Atestados</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 </head>
 <body>
 <div>
     Cadastrar Usuário:
+    <form action="/conta/senha" method="get">
+        <label for="senha">Senha</label>
+        <button type="submit">Gerar Senha</button >
+        <p th:text="${senhaGerada}"></p>
+    </form>
+
     <form action="/conta/inserir" method="get">
         <label for="login">Login</label>
         <input name="login" />
         <label for="senha">Senha</label>
-        <input name="senha" />
+        <input name="senha"  />
         <button type="submit">Submit</button >
     </form>
 
