Corrigindo funcionario-servico

--- a/3 Entrega/funcionario-servico/src/main/resources/templates/funcionario.html
+++ b/3 Entrega/funcionario-servico/src/main/resources/templates/funcionario.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 <div>
-    Bem Vindo
+    <h1>Bem Vindo, <span th:text="${nome}"></sapn></h1>
+    <p th:text="${cargo}"></p>
 </div>
 </body>
 </html>
